<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/select_group_label"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="left"
            android:text="@string/contact_group"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/select_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:prompt="@string/select_contacts"
            android:spinnerMode="dialog"
            android:textSize="14dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerVertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/only_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="left"
            android:text="@string/only_phone"
            android:textSize="18dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/only_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginBottom="20dp" >

        <TextView
            android:id="@+id/bg_opacity_label"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:clickable="false"
            android:gravity="left"
            android:text="@string/bkg_opacity"
            android:textSize="18dp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/bkg_opacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           
            android:max="100" />
    </LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >
		
        <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerVertical" />
        
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:measureWithLargestChild="true"
            android:orientation="horizontal"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:paddingTop="0dip" >

            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickCancel"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickSave"
                android:text="@string/save" />
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>